--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Peisong Wang"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Graduate student of Tsinghua University."
   location         : "Shenzhen"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
