--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Peisong Wang"
   avatar           : "profile.png"
   bio              : "Graduate student of Tsinghua University."
-  location         : "Shenzhen"
+  location         : "Shenzhen/Guangzhou/Hong Kong"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=1pwiTqIAAAAJ&hl=en"
