--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : peisong-wang-67b7292b4/
+  linkedin         : peisong-wang-67b7292b4
   # orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
