--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Travel"
+    url: /travel/
+
   # - title: "Thoughts"
   #   url: /Thoughts/    
 
