--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Peisong Wang"
   avatar           : "profile.png"
-  bio              : "Graduate student of Tsinghua University."
-  location         : "Shenzhen/Guangzhou/Hong Kong"
+  bio              : "Ph.D student at HKUST(GZ)."
+  location         : "Guangzhou/Shenzhen/Hong Kong"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=1pwiTqIAAAAJ&hl=en"
-  email            : wps22@mails.tsinghua.edu.cn
+  email            : ps.wang@connect.hkust-gz.edu.cn
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
