--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Peisong Wang"
   avatar           : "profile.png"
-  bio              : "Ph.D student at HKUST(GZ)."
+  bio              : "Ph.D student of HKUST(GZ)."
   location         : "Guangzhou/Shenzhen/Hong Kong"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
