--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Peisong Wang"
   avatar           : "profile.png"
   bio              : "Ph.D student of HKUST(GZ)."
-  location         : "Guangzhou/Shenzhen/Hong Kong"
+  location         : "Guangzhou/Shenzhen"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=1pwiTqIAAAAJ&hl=en"
-  email            : ps.wang@connect.hkust-gz.edu.cn
+  email            : leowang0010@gmail.com
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
